2025-02-05T01:36:12Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13148376301 # 1106
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-05
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3434 / 0 3435 / +0 +1

2025-02-04T01:27:07Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13126397570 # 1104
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-04
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3432 / 0 3434 / +0 +2

2025-02-03T01:35:39Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13104655653 # 1102
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-03
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3431 / 0 3432 / +0 +1

2025-02-02T12:33:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13098810267 # 1101
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-02
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3429 / 0 3431 / +0 +2

2025-02-01T01:39:02Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13083793177 # 1098
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-02-01
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3427 / 0 3429 / +0 +2

2025-01-31T01:27:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/13064574161 # 1096